<resources>
    <string name="app_name">StudyHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_courses">Search Courses</string>
    <string name="cse">CSE  </string>
    <string name="courses">COURSES</string>
    <string name="it">IT</string>
    <string name="uc">UC</string>
    <string name="branch_cse">BRANCH-CSE</string>
    <string name="subject_name">Subject Name</string>
    <string name="course_code_ite1004">Course Code - ITE1004</string>
    <string name="credits_4">Credits - 4</string>
    <string name="modules_8">Modules - 8</string>
    <string name="see_detailed_description">See detailed description</string>
    <string name="data_structures_and_algorithms_ite_1004">Data Structures and Algorithms ITE-1004</string>
    <string name="note">NOTE</string>
    <string name="module_1">MODULE 1</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_again">Yikes!\nNo Internet Connection</string>
    <string name="coming_soon">(Coming Soon)</string>
</resources>