<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#B4D7EA"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/subjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="15dp"
            />
        <View
            android:id="@+id/viewBlue"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:background="#3B82F6"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code_ite1004"
            android:layout_marginTop="55dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_4"
            android:layout_marginTop="85dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modules_8"
            android:layout_marginTop="115dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            />
    </androidx.cardview.widget.CardView>


</RelativeLayout>